--- a/src/content/Talk.css
+++ b/src/content/Talk.css
@@ -1,5 +1,5 @@
 .talk {
-  text-align: center;
+
   height: 100vh;
   background-color:black;
   color: white;
@@ -39,7 +39,7 @@
   margin-right:5%;
 }
 .talk .talks{
-  border: 2px solid;
+  margin-top: 5vh;
   text-align: center;
   overflow: auto;
   max-height: 70vh;
@@ -68,6 +68,13 @@
 }
 
 .talk .typearea button{
+  text-align:left;
   font-size:large;
 }
-
+.talk .fixed{
+  background-color: lightgray;
+}
+.talk .fixed .closebtn{
+  clear: left;
+  float: right;
+}
