--- a/src/content/Talk.css
+++ b/src/content/Talk.css
@@ -59,13 +59,19 @@
   margin-top: 5vh;
   text-align: center;
   overflow: auto;
-  max-height: 70vh;
+  max-height: 80vh;
 }
 .talk .talkitem{
-  border-bottom:2px solid ;
   text-align: left;
   margin:auto;
+  margin-top: 15px;
+  list-style: none;
+  border-bottom:2px solid ;
 }
+.talk .talkitem .username{
+  margin-bottom:3px;
+}
+
 .talk .typearea{
   background-color:rgb(122, 121, 121);
   width:80%;
