--- a/src/content/TalkSide.css
+++ b/src/content/TalkSide.css
@@ -13,31 +13,31 @@
   margin-bottom: 2.5%;
 }
 
-.talk .sidemenew .sideitem {
+.sideitem {
   overflow: auto;
   max-height: 70vh;
 }
-.talk .sidemenew .inputarea input {
+ .inputarea input {
   width: 90%;
 }
-.talk .sidemenew .side.selected {
+.selected {
   background-color: lightgray;
 }
-.talk .sidemenew .topicact select {
+ .topicact select {
   margin-left: 2%;
 }
-.talk .sidemenew .topicact {
+.topicact {
   margin-top: 3%;
   margin-bottom: 3%;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-.talk .sidemenew .sideitem div {
+ .sideitem div {
   padding: 5%;
   font-size: x-large;
 }
-.talk .sidemenew .sideitem button {
+ .sideitem button {
   float: right;
   margin-top: -3%;
 }
