--- a/src/content/TalkSide.css
+++ b/src/content/TalkSide.css
@@ -1,4 +1,4 @@
-.sidemenew {
+.side {
   grid-row: 2;
   grid-column: 1;
   display: flexbox;
@@ -6,38 +6,38 @@
   margin-left: 2%;
   border-right: 6px solid;
 }
-
-.side {
-  list-style: none;
-  border: 3px solid;
-  margin-bottom: 2.5%;
-}
-
-.sideitem {
-  overflow: auto;
-  max-height: 70vh;
-}
- .inputarea input {
+.side-input-name {
   width: 90%;
 }
-.selected {
-  background-color: lightgray;
-}
- .topicact select {
-  margin-left: 2%;
-}
-.topicact {
+.side-select {
   margin-top: 3%;
   margin-bottom: 3%;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
- .sideitem div {
-  padding: 5%;
-  font-size: x-large;
+.topic-select {
+  margin-left: 2%;
 }
- .sideitem button {
+.side-items {
+  overflow: auto;
+  max-height: 70vh;
+}
+ .topic-button {
   float: right;
   margin-top: -3%;
 }
+
+.topic-item {
+  list-style: none;
+  border: 3px solid;
+  margin-bottom: 2.5%;
+  padding: 5%;
+  font-size: x-large;
+}
+
+
+.selected {
+  background-color: lightgray;
+}
+
