--- a/src/content/TalkSide.css
+++ b/src/content/TalkSide.css
@@ -41,3 +41,9 @@
   background-color: lightgray;
 }
 
+@media (max-width:425px) {
+  .side-items {
+    overflow: auto;
+    max-height: 30vh;
+  }
+}
