--- a/src/content/TalkSide.css
+++ b/src/content/TalkSide.css
@@ -6,9 +6,11 @@
   margin-left: 20%;
   border-right: 6px solid;
 }
+
 .side-input-name {
   width: 90%;
 }
+
 .side-select {
   margin-top: 3%;
   margin-bottom: 3%;
@@ -16,13 +18,16 @@
   justify-content: space-between;
   align-items: center;
 }
+
 .topic-select {
   margin-left: 2%;
 }
+
 .side-items {
   overflow: auto;
   max-height: 70vh;
 }
+
  .topic-button {
   float: right;
   margin-top: -3%;
@@ -42,7 +47,7 @@
   background-color: lightgray;
 }
 
-@media (max-width:425px) {
+@media (width <=425px) {
   .side-items {
     overflow: auto;
     max-height: 30vh;
