--- a/app/content/TalkSide.css
+++ b/app/content/TalkSide.css
@@ -6,9 +6,7 @@
   margin-left: 20%;
   border-right: 6px solid;
 }
-.jump{
-  background-color: blue;
-}
+
 .side-title{
   font-size: x-large;
 }
@@ -21,14 +19,14 @@
 .side-select {
   margin-top: 3%;
   margin-bottom: 3%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  display: grid;
+  grid-template-columns:6fr 2fr 2fr;
 }
 
 .topic-select {
-  margin-left: 2%;
+  grid-column: 1;
   background-color: black;
+  margin-right: 5%;
   border: 1px solid;
 }
 
@@ -37,10 +35,18 @@
   max-height: 70vh;
 }
 
- .topic-button {
+
+ .topic-search-button{
+  grid-column: 2;
+  border: 2px solid;
+  margin: 0 10%;
+  padding: 0% 5%;  
+ }
+ .topic-create-button {
+  grid-column: 3;
   float: right;
   border: 2px solid;
-  margin-right: 2%;
+  margin: 0 10%;
   padding: 0% 5%;
 }
 
@@ -53,9 +59,16 @@
   font-size: x-large;
 }
 
+.jump{
+  width: 60%;
+  background-color: rgb(81, 81, 106);
+  text-align: center;
+  margin: auto;
+}
 
 .topic-item.selected {
-  background-color:lightgrey;
+  background-color:rgb(233, 230, 230);
+  color:rgb(71, 71, 248);
 }
 
 @media (width <=768px) {
