--- a/app/content/TalkSide.css
+++ b/app/content/TalkSide.css
@@ -1,9 +1,9 @@
 .side {
   grid-row: 2;
   grid-column: 1;
-  display: flexbox;
+  display: grid;
+  grid-template-columns: 2fr 8fr;
   padding: 1%;
-  margin-left: 20%;
   border-right: 6px solid;
 }
 
@@ -25,12 +25,14 @@
 
 .topic-select {
   grid-column: 1;
+  width: 100%;
   background-color: black;
   margin-right: 5%;
   border: 1px solid;
 }
 
 .side-items {
+  grid-row: 2;
   overflow: auto;
   max-height: 70vh;
 }
@@ -70,6 +72,18 @@
   background-color:rgb(233, 230, 230);
   color:rgb(71, 71, 248);
 }
+
+.side-Paginations{
+  font-size: xx-large;
+  text-align: center;
+}
+.side-Paginations div{
+ border: 1px solid;
+ margin: 30% 15%;
+ background-color:rgb(157, 157, 157);
+}
+
+/* SidePagination.css */
 
 @media (width <=768px) {
   .side {
