--- a/app/content/TalkSide.css
+++ b/app/content/TalkSide.css
@@ -1,9 +1,9 @@
 .side {
   grid-row: 2;
   grid-column: 1;
-  display: flexbox;
+  display: grid;
+  grid-template-columns: 2fr 8fr;
   padding: 1%;
-  margin-left: 20%;
   border-right: 6px solid;
 }
 
@@ -19,26 +19,36 @@
 .side-select {
   margin-top: 3%;
   margin-bottom: 3%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  display: grid;
+  grid-template-columns:6fr 2fr 2fr;
 }
 
 .topic-select {
-  margin-left: 2%;
+  grid-column: 1;
+  width: 100%;
   background-color: black;
+  margin-right: 5%;
   border: 1px solid;
 }
 
 .side-items {
+  grid-row: 2;
   overflow: auto;
   max-height: 70vh;
 }
 
- .topic-button {
+
+ .topic-search-button{
+  grid-column: 2;
+  border: 2px solid;
+  margin: 0 10%;
+  padding: 0% 5%;  
+ }
+ .topic-create-button {
+  grid-column: 3;
   float: right;
   border: 2px solid;
-  margin-right: 2%;
+  margin: 0 10%;
   padding: 0% 5%;
 }
 
@@ -51,10 +61,29 @@
   font-size: x-large;
 }
 
+.jump{
+  width: 60%;
+  background-color: rgb(81, 81, 106);
+  text-align: center;
+  margin: auto;
+}
 
 .topic-item.selected {
-  background-color:lightgrey;
+  background-color:rgb(233, 230, 230);
+  color:rgb(71, 71, 248);
 }
+
+.side-Paginations{
+  font-size: xx-large;
+  text-align: center;
+}
+.side-Paginations div{
+ border: 1px solid;
+ margin: 30% 15%;
+ background-color:rgb(157, 157, 157);
+}
+
+/* SidePagination.css */
 
 @media (width <=768px) {
   .side {
