--- a/app/content/TalkSide.css
+++ b/app/content/TalkSide.css
@@ -58,13 +58,24 @@
   margin-bottom: 2.5%;
   margin-right: 2%;
   padding: 5%;
-  font-size: x-large;
+  font-size: xx-large;
 }
-
+.topictag{
+  font-size: large;
+  float: right;
+}
+.faviritebutton{
+  width: 80%;
+  background-color: rgb(81, 81, 106);
+  text-align: center;
+  font-size: x-large;
+  margin: 10%;
+}
 .jump{
   width: 60%;
   background-color: rgb(81, 81, 106);
   text-align: center;
+  font-size: x-large;
   margin: auto;
 }
 
