--- a/app/mypage/mypage.css
+++ b/app/mypage/mypage.css
@@ -1,5 +1,6 @@
 .mypage {
   display: grid;
+  height: 100vh;
   background-color: black;
   color: white;
 }
@@ -8,7 +9,7 @@ header {
   display: flex;
 }
 header h1 {
-  margin: 1% 3%;
+  margin:auto;
   font-size: 3em;
 }
 h2 {
