--- a/app/mypage/mypage.css
+++ b/app/mypage/mypage.css
@@ -38,6 +38,10 @@ main h2 {
 .faviritetable td {
   border-left: 2px solid;
 }
+.imgup{
+  background-color: aqua;
+  font-size: xx-large;
+}
 @media (width <= 768px) {
   header h1 {
     font-size: 2em;
