--- a/app/mypage/mypage.css
+++ b/app/mypage/mypage.css
@@ -1,7 +1,7 @@
 .mypage {
   display: grid;
   grid-template-rows: 10% 1fr;
-  height: 100vh;
+  min-height: 100vh;
   background-color: black;
   color: white;
 }
@@ -45,9 +45,7 @@ main h2 {
   color: black;
   width: 50%;
 }
-.imgdisplay{
-  display: flex;
-}
+
 @media (width <= 768px) {
   header h1 {
     font-size: 2em;
